set(TARGET_NAME BulletDynamics)
add_library(
  ${TARGET_NAME}
  Character/btKinematicCharacterController.cpp
  ConstraintSolver/btConeTwistConstraint.cpp
  ConstraintSolver/btContactConstraint.cpp
  ConstraintSolver/btFixedConstraint.cpp
  ConstraintSolver/btGearConstraint.cpp
  ConstraintSolver/btGeneric6DofConstraint.cpp
  ConstraintSolver/btGeneric6DofSpringConstraint.cpp
  ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
  ConstraintSolver/btHinge2Constraint.cpp
  ConstraintSolver/btHingeConstraint.cpp
  ConstraintSolver/btPoint2PointConstraint.cpp
  ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
  ConstraintSolver/btSequentialImpulseConstraintSolverMt.cpp
  ConstraintSolver/btBatchedConstraints.cpp
  ConstraintSolver/btNNCGConstraintSolver.cpp
  ConstraintSolver/btSliderConstraint.cpp
  ConstraintSolver/btSolve2LinearConstraint.cpp
  ConstraintSolver/btTypedConstraint.cpp
  ConstraintSolver/btUniversalConstraint.cpp
  Dynamics/btDiscreteDynamicsWorld.cpp
  Dynamics/btDiscreteDynamicsWorldMt.cpp
  Dynamics/btSimulationIslandManagerMt.cpp
  Dynamics/btRigidBody.cpp
  Dynamics/btSimpleDynamicsWorld.cpp
  # Dynamics/Bullet-C-API.cpp
  Vehicle/btRaycastVehicle.cpp
  Vehicle/btWheelInfo.cpp
  Featherstone/btMultiBody.cpp
  Featherstone/btMultiBodyConstraint.cpp
  Featherstone/btMultiBodyConstraintSolver.cpp
  Featherstone/btMultiBodyDynamicsWorld.cpp
  Featherstone/btMultiBodyFixedConstraint.cpp
  Featherstone/btMultiBodyGearConstraint.cpp
  Featherstone/btMultiBodyJointLimitConstraint.cpp
  Featherstone/btMultiBodyJointMotor.cpp
  Featherstone/btMultiBodyMLCPConstraintSolver.cpp
  Featherstone/btMultiBodyPoint2Point.cpp
  Featherstone/btMultiBodySliderConstraint.cpp
  Featherstone/btMultiBodySphericalJointMotor.cpp
  MLCPSolvers/btDantzigLCP.cpp
  MLCPSolvers/btMLCPSolver.cpp
  MLCPSolvers/btLemkeAlgorithm.cpp
  ../btBulletDynamicsCommon.h
  ../btBulletCollisionCommon.h
  ConstraintSolver/btConeTwistConstraint.h
  ConstraintSolver/btConstraintSolver.h
  ConstraintSolver/btContactConstraint.h
  ConstraintSolver/btContactSolverInfo.h
  ConstraintSolver/btFixedConstraint.h
  ConstraintSolver/btGearConstraint.h
  ConstraintSolver/btGeneric6DofConstraint.h
  ConstraintSolver/btGeneric6DofSpringConstraint.h
  ConstraintSolver/btGeneric6DofSpring2Constraint.h
  ConstraintSolver/btHinge2Constraint.h
  ConstraintSolver/btHingeConstraint.h
  ConstraintSolver/btJacobianEntry.h
  ConstraintSolver/btPoint2PointConstraint.h
  ConstraintSolver/btSequentialImpulseConstraintSolver.h
  ConstraintSolver/btSequentialImpulseConstraintSolverMt.h
  ConstraintSolver/btNNCGConstraintSolver.h
  ConstraintSolver/btSliderConstraint.h
  ConstraintSolver/btSolve2LinearConstraint.h
  ConstraintSolver/btSolverBody.h
  ConstraintSolver/btSolverConstraint.h
  ConstraintSolver/btTypedConstraint.h
  ConstraintSolver/btUniversalConstraint.h
  Dynamics/btActionInterface.h
  Dynamics/btDiscreteDynamicsWorld.h
  Dynamics/btDiscreteDynamicsWorldMt.h
  Dynamics/btSimulationIslandManagerMt.h
  Dynamics/btDynamicsWorld.h
  Dynamics/btSimpleDynamicsWorld.h
  Dynamics/btRigidBody.h
  Vehicle/btRaycastVehicle.h
  Vehicle/btVehicleRaycaster.h
  Vehicle/btWheelInfo.h
  Featherstone/btMultiBody.h
  Featherstone/btMultiBodyConstraint.h
  Featherstone/btMultiBodyConstraintSolver.h
  Featherstone/btMultiBodyDynamicsWorld.h
  Featherstone/btMultiBodyFixedConstraint.h
  Featherstone/btMultiBodyGearConstraint.h
  Featherstone/btMultiBodyJointLimitConstraint.h
  Featherstone/btMultiBodyJointMotor.h
  Featherstone/btMultiBodyLink.h
  Featherstone/btMultiBodyLinkCollider.h
  Featherstone/btMultiBodyMLCPConstraintSolver.h
  Featherstone/btMultiBodyPoint2Point.h
  Featherstone/btMultiBodySliderConstraint.h
  Featherstone/btMultiBodySolverConstraint.h
  MLCPSolvers/btDantzigLCP.h
  MLCPSolvers/btDantzigSolver.h
  MLCPSolvers/btMLCPSolver.h
  MLCPSolvers/btMLCPSolverInterface.h
  MLCPSolvers/btPATHSolver.h
  MLCPSolvers/btSolveProjectedGaussSeidel.h
  MLCPSolvers/btLemkeSolver.h
  MLCPSolvers/btLemkeAlgorithm.h
  Character/btCharacterControllerInterface.h
  Character/btKinematicCharacterController.h)
set_target_properties(${TARGET_NAME} PROPERTIES VERSION ${BULLET_VERSION})
set_target_properties(${TARGET_NAME} PROPERTIES SOVERSION ${BULLET_VERSION})
target_compile_options(${TARGET_NAME} PRIVATE /wd4244 /wd4305 /wd4267)
target_link_libraries(${TARGET_NAME} BulletCollision LinearMath)
